--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   }
 }
